tests/errors/unprovable-cons.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint |L - G| >= 1
  ┌─ tests/errors/unprovable-cons.fil:8:3
  │
5 │ comp Main<G: L-(G), L: 1>(
  │           -------- Interface allows event to trigger every |L - G| cycle(s)
  ·
8 │   @[G, G+1] left: 32,
  │   ^^^^^^^^^^^^^^^^^^ Signal lasts for 1 cycle(s)

